--- a/src/main/webapp/css/styleSuccess.css
+++ b/src/main/webapp/css/styleSuccess.css
@@ -168,3 +168,31 @@ padding: 10px 10px 10px 30px; /* Ajustar padding para o ícone */
     outline: none;
     border-color: #007bff;
 }
+
+.btnQuit {
+    text-align: center;  /* Alinha o botão no centro */
+    margin-top: 20px;     /* Adiciona um espaço acima do botão */
+}
+
+/* Estilizando o botão */
+.btnQuit button {
+    background-color: #f44336; /* Cor de fundo vermelha */
+    color: white;              /* Cor do texto */
+    border: none;              /* Remove a borda padrão */
+    padding: 10px 20px;        /* Adiciona padding no botão */
+    font-size: 16px;           /* Tamanho da fonte */
+    cursor: pointer;          /* Muda o cursor para indicar que o botão é clicável */
+    border-radius: 5px;        /* Borda arredondada */
+    transition: background-color 0.3s; /* Transição suave para o fundo */
+}
+
+/* Efeito de hover no botão */
+.btnQuit button:hover {
+    background-color: #d32f2f; /* Cor de fundo ao passar o mouse */
+}
+
+/* Efeito de foco no botão */
+.btnQuit button:focus {
+    outline: none; /* Remove a borda de foco */
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); /* Sombra ao focar */
+}
